fix(api): resolve 26.1 Sound lookup + Java 25 URL change
- SoundStorage: Registry.SOUNDS.get(NamespacedKey) first, guarded legacy
  Sound.valueOf fallback for config enum-names; unknown -> WARN + skip (no boot crash)
- HeadUtils: URI.create(url).toURL() replaces URL(String) ctor (deprecated for removal since Java 20)